-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
Repl 2020-02-10
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Since the server does not increment the topologyVersion on shutdown, attaching the
topologyVersion on ShutdownErrors causes clients to ignore these errors and continue targeting the server. We should not attach topologyVersion to ShutdownErrors, so that SDAM always updates the server's status on a ShutdownError.