SERVER-45882 Do not attach topologyVersion to ShutdownErrors