jstests/replsets/notmaster_errors_return_topology_version.js
@@ -1,5 +1,5 @@
 /**
- * This tests that state change errors include a TopologyVersion field.
+ * This tests that NotMaster errors include a TopologyVersion field.
  *
  * @tags: [requires_fcv_44]
  */
@@ -12,19 +12,20 @@ rst.startSet();
 rst.initiate();
 
 const dbName = "test";
-const collName = "state_change_errors_return_topology_version";
+const collName = "notmaster_errors_return_topology_version";
 const primary = rst.getPrimary();
 const primaryDB = primary.getDB(dbName);
 
-const stateChangeErrorCodes = [
-    ErrorCodes.InterruptedAtShutdown,
+const notMasterErrorCodes = [
     ErrorCodes.InterruptedDueToReplStateChange,
-    ErrorCodes.ShutdownInProgress,
     ErrorCodes.NotMaster,
     ErrorCodes.NotMasterNoSlaveOk,
     ErrorCodes.NotMasterOrSecondary,
     ErrorCodes.PrimarySteppedDown
 ];
+
+const otherErrorCodes =
+    [ErrorCodes.InterruptedAtShutdown, ErrorCodes.ShutdownInProgress, ErrorCodes.InternalError];
 
 function runFailInCommandDispatch(errorCode, isWCError) {
     jsTestLog(`Testing with errorCode: ${
@@ -52,8 +53,8 @@ function runFailInCommandDispatch(errorCode, isWCError) {
 
     const res = primaryDB.runCommand({insert: collName, documents: [{x: 1}]});
     assert.commandFailedWithCode(res, errorCode);
-    // Only StateChangeErrors should return TopologyVersion in the response.
-    if (stateChangeErrorCodes.includes(errorCode)) {
+    // Only NotMaster errors should return TopologyVersion in the response.
+    if (notMasterErrorCodes.includes(errorCode)) {
         assert(res.hasOwnProperty("topologyVersion"), tojson(res));
     } else {
         assert(!res.hasOwnProperty("topologyVersion"), tojson(res));
@@ -75,8 +76,8 @@ function runFailInRunCommand(errorCode) {
 
     const res = primaryDB.runCommand({insert: collName, documents: [{x: 1}]});
     assert.commandFailedWithCode(res, errorCode);
-    // Only StateChangeErrors should return TopologyVersion in the response.
-    if (stateChangeErrorCodes.includes(errorCode)) {
+    // Only NotMaster errors should return TopologyVersion in the response.
+    if (notMasterErrorCodes.includes(errorCode)) {
         assert(res.hasOwnProperty("topologyVersion"), tojson(res));
     } else {
         assert(!res.hasOwnProperty("topologyVersion"), tojson(res));
@@ -87,18 +88,22 @@ function runFailInRunCommand(errorCode) {
         primary.adminCommand({configureFailPoint: "failWithErrorCodeInRunCommand", mode: "off"}));
 }
 
-stateChangeErrorCodes.forEach(function(code) {
+notMasterErrorCodes.forEach(function(code) {
     runFailInCommandDispatch(code, true /* isWCError */);
     runFailInCommandDispatch(code, false /* isWCError */);
 });
 
-// Test that errors that are not state change errors will not return a TopologyVersion.
-runFailInCommandDispatch(ErrorCodes.InternalError, true /* isWCError */);
-runFailInCommandDispatch(ErrorCodes.InternalError, false /* isWCError */);
+// Test that errors that are not NotMaster errors will not return a TopologyVersion.
+otherErrorCodes.forEach(function(code) {
+    runFailInCommandDispatch(code, true /* isWCError */);
+    runFailInCommandDispatch(code, false /* isWCError */);
+});
 
-stateChangeErrorCodes.forEach(function(code) {
+notMasterErrorCodes.forEach(function(code) {
     runFailInRunCommand(code);
 });
-runFailInRunCommand(ErrorCodes.InternalError);
+otherErrorCodes.forEach(function(code) {
+    runFailInRunCommand(code);
+});
 rst.stopSet();
 })();
